<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Копилочка</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_add_operations">Добавить</string>
    <string name="action_edit_operation">Редактировать</string>
    <string name="action_delete_operation">Удалить</string>
    <string name="action_statistic">Статистика</string>
    <string name="action_about">О программе</string>
    <string name="action_settings">Настройки</string>

    <string name="tvSumLabel">Сумма</string>
    <string name="tvCategoryLabel">Категория</string>
    <string name="rbIncomeLabel">Поступление средств</string>
    <string name="rbOutcomeLabel">Трата средств</string>

    <string name="tvTimeItemLabel">19:45</string>
    <string name="tvSumItemLabel">+5000 р.</string>
    <string name="tvDateLabel">08.12.2014</string>

    <string name="ivCategoryContentDescription">CategoryIcon</string>

    <string name="log_tag">myLog</string>

    <string name="attribute_sum">sum</string>
    <string name="attribute_time">time</string>
    <string name="attribute_category">category</string>


</resources>
