<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/action_add_operations"
        android:title="@string/action_add_operations"
        android:icon="@drawable/add"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/action_statistic"
        android:title="@string/action_statistic"
        android:icon="@drawable/statistic"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never">
    </item>
</menu>
