<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/rbOutcomeLabel"
            android:id="@+id/rbOutcome"
            android:checked="true"
            android:layout_gravity="left" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbIncomeLabel"
            android:id="@+id/rbIncome"
            android:checked="false"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/tvSumLabel"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
        </TextView>

        <EditText
            android:id="@+id/etSum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:maxLength="10">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/tvCategoryLabel"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
        </TextView>

        <Spinner
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spCategory">
        </Spinner>

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:text="@string/action_add_operations"
        android:layout_gravity="left">
    </Button>

</LinearLayout>