<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvSumItemLabel"
        android:id="@+id/tvSum"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="@dimen/sum_text_left_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvTimeItemLabel"
        android:id="@+id/tvTime"
        android:layout_toRightOf="@+id/tvSum"
        android:layout_marginLeft="@dimen/time_text_left_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="false"
        android:layout_marginBottom="@dimen/time_text_bottom_margin" />

    <ImageView
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:contentDescription="@string/ivCategoryContentDescription"
        android:id="@+id/ivCategory"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_launcher"
        android:layout_alignParentTop="false"
        android:layout_alignParentBottom="false"
        android:layout_marginRight="15dp"
        android:layout_centerVertical="true">
    </ImageView>
</RelativeLayout>